--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-<body>
-Hi
-</body>
+<head>
+	<title>Advanced Mechanical Polymers - MCOR Homepage</title>
 
+	<meta name="description" content="Mechanical polymers for cold repair and protection of pumps, industrial structures, mechanical components and equipment. Ceramic pump coatings and epoxy.">
+
+	<meta name="keywords" content="MCOR, Epoxytec, polymers, coatings, epoxy, urethane">
+
+	<link rel="stylesheet" type="text/css" href="mcor.css">
+</head>
+
+
+<body>
+
+</body>
 </html>
