--- a/index.html
+++ b/index.html
@@ -13,5 +13,23 @@
 
 <body>
 
+<div id="nav-container">
+	<div id="menu">
+	</div>
+</div>
+
+
+<div id="banner">
+</div>
+
+
+<div id="content-container">
+
+</div>
+
+
+<div id="footer">
+</div>
+
 </body>
 </html>
