--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 <body>
 
 <div id="nav-container">
+<img src="placeholder.png">
 	<div id="menu">
 	</div>
 </div>
 
 
 <div id="banner">
+<img src="placeholder.png">
 </div>
 
 
