--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div id="nav-container">
 <img src="placeholder.png">
 	<div id="menu">
+	Products About Us Applications Find a Distributor Contact Us
 	</div>
 </div>
 
