banner placement and menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
 
 <div id="nav-container">
-<img src="placeholder.png">
+	<div id="logo">
+	<img src="placeholder.png">
+	</div>
+	
 	<div id="menu">
 	Products About Us Applications Find a Distributor Contact Us
 	</div>
