--- a/index.html
+++ b/index.html
@@ -19,7 +19,36 @@
 	</div>
 	
 	<div id="menu">
-	Products About Us Applications Find a Distributor Contact Us
+		<ul>
+		<li>Products</li>
+			<ul>
+			<li>1000 Series</li>
+			<li>MCOR 1225 | mCoat IM Plus</li>
+			<li>2000 Series</li>
+			<li>MCOR 2101 | mPlait MP</li>
+			<li>MCOR 2102 | mPlait MP XL</li>
+			<li>MCOR 2205 | mPlait HT</li>
+			<li>MCOR 2555 | mPlait X</li>
+			<li>3000 Series</li>
+			<li>MCOR 3115 | mClad mFill</li>
+			<li>MCOR 3310 | mClad Metal</li>
+			<li>MCOR 3330 | mClad Ceramic Metal</li>
+			<li>MCOR 3880 | mClad xWear Alumina</li>
+			<li>4000 Series</li>
+			<li>MCOR 4180 | mFlex 80 Fluid Sealant</li>
+			<li>MCOR 4280 | mFlex 80 Rbbr Repair</li>
+			<li>MCOR 4500 | mFlex Fluid Shock</li>
+			<li>5000 Series</li>
+			<li>MCOR 5101 | mCrete R Gel</li>
+			<li>MCOR 5101 | mCrete R Gel Injection</li>
+			<li>MCOR 5105 | mCrete R Compound</li>
+			<li>Accessories</li>
+			</ul>
+		<li>About Us</li>
+		<li>Applications</li>
+		<li>Find a Distributor</li> 
+		<li>Contact Us</li>
+		</ul>
 	</div>
 </div>
 
