--- a/index.html
+++ b/index.html
@@ -14,35 +14,33 @@
 <body>
 
 <div id="nav-container">
-	<div id="logo">
 	<img src="placeholder.png">
-	</div>
 	
 	<div id="menu">
 		<ul>
 		<li>Products</li>
 			<ul>
-			<li>1000 Series</li>
-			<li>MCOR 1225 | mCoat IM Plus</li>
-			<li>2000 Series</li>
-			<li>MCOR 2101 | mPlait MP</li>
-			<li>MCOR 2102 | mPlait MP XL</li>
-			<li>MCOR 2205 | mPlait HT</li>
-			<li>MCOR 2555 | mPlait X</li>
-			<li>3000 Series</li>
-			<li>MCOR 3115 | mClad mFill</li>
-			<li>MCOR 3310 | mClad Metal</li>
-			<li>MCOR 3330 | mClad Ceramic Metal</li>
-			<li>MCOR 3880 | mClad xWear Alumina</li>
-			<li>4000 Series</li>
-			<li>MCOR 4180 | mFlex 80 Fluid Sealant</li>
-			<li>MCOR 4280 | mFlex 80 Rbbr Repair</li>
-			<li>MCOR 4500 | mFlex Fluid Shock</li>
-			<li>5000 Series</li>
-			<li>MCOR 5101 | mCrete R Gel</li>
-			<li>MCOR 5101 | mCrete R Gel Injection</li>
-			<li>MCOR 5105 | mCrete R Compound</li>
-			<li>Accessories</li>
+			<li><a href="http://www.mcor.net/1000-series/">1000 Series</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-1225-mcoat-im-plus-2/">MCOR 1225 | mCoat IM Plus</a></li>
+			<li><a href="http://www.mcor.net/2000-series/">2000 Series</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-2101-mplait-mp/">MCOR 2101 | mPlait MP</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-2102-mplait-mp-xl/">MCOR 2102 | mPlait MP XL</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-2205-mplait-ht/">MCOR 2205 | mPlait HT</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-2555-mplait-x/">MCOR 2555 | mPlait X</a></li>
+			<li><a href="http://www.mcor.net/3000-series/">3000 Series</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-3115-mclad-mfill/">MCOR 3115 | mClad mFill</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-3310-mclad-metal/">MCOR 3310 | mClad Metal</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-3330-mclad-ceramic-metal/">MCOR 3330 | mClad Ceramic Metal</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-3880-mclad-xwear-alumina/">MCOR 3880 | mClad xWear Alumina</a></li>
+			<li><a href="http://www.mcor.net/4000-series/">4000 Series</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-4180-mflex-80-fluid-sealant/">MCOR 4180 | mFlex 80 Fluid Sealant</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-4280-mflex-80-rbbr-repair/">MCOR 4280 | mFlex 80 Rbbr Repair</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-4500-mflex-fluid-shock/">MCOR 4500 | mFlex Fluid Shock</a></li>
+			<li><a href="http://www.mcor.net/5000-series/">5000 Series</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-5101-mcrete-r-gel/">MCOR 5101 | mCrete R Gel</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-5101-mcrete-r-gel-injection/">MCOR 5101 | mCrete R Gel Injection</a></li>
+			<li><a href="http://www.mcor.net/epoxytec-product/mcor-5105-mcrete-r-compound/">MCOR 5105 | mCrete R Compound</a></li>
+			<li><a href="http://www.mcor.net/accessories/">Accessories</a></li>
 			</ul>
 		<li>About Us</li>
 		<li>Applications</li>
