more menu changes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<div id="menu">
 		<ul>
-		<li>Products</li>
+		<li><a href="http://www.mcor.net/products/">Products</a>
 			<ul>
 			<li><a href="http://www.mcor.net/1000-series/">1000 Series</a></li>
 			<li><a href="http://www.mcor.net/epoxytec-product/mcor-1225-mcoat-im-plus-2/">MCOR 1225 | mCoat IM Plus</a></li>
@@ -42,10 +42,11 @@
 			<li><a href="http://www.mcor.net/epoxytec-product/mcor-5105-mcrete-r-compound/">MCOR 5105 | mCrete R Compound</a></li>
 			<li><a href="http://www.mcor.net/accessories/">Accessories</a></li>
 			</ul>
-		<li>About Us</li>
-		<li>Applications</li>
-		<li>Find a Distributor</li> 
-		<li>Contact Us</li>
+		</li>
+		<li><a href="http://www.mcor.net/about-us/">About Us</a></li>
+		<li><a href="http://www.mcor.net/applications/">Applications</a></li>
+		<li><a href="http://www.mcor.net/distributor-finder/">Find a Distributor</a></li> 
+		<li><a href="http://www.mcor.net/contact-us/">Contact Us</a></li>
 		</ul>
 	</div>
 </div>
