--- a/index.html
+++ b/index.html
@@ -58,6 +58,26 @@
 
 
 <div id="content-container">
+<h1>High Performance Coatings and “Cold” Weld Repair Polymers for Pumps, Industrial Components, Equipment and Machinery</h1>
+
+
+	<div id="left">
+	<img src="placeholder.png">
+	<h2><b>Distributor</b>Finder</h2>
+	In need of MCOR solutions in your area? Whether you need to purchase ceramic coatings, repair epoxies, or simply require technical assistance. Search for your regional MCOR partner to assist you with sales and service.
+	</div>
+
+	<div id="mid">
+	<img src="placeholder.png">
+	<h2><b>5 </b>Series</h2>
+	Five Distinct MCOR Product Series and Accessories. Industrial-grade Protective Coatings, Advanced Performance Ceramic Coatings, Reclaiming & Cladding Polymers, Elastomers and Polymer Cements for concrete repair.
+	</div>
+
+	<div id="right">
+	<img src="placeholder.png">
+	<h2><b>MCOR</b>ABILITIES</h2>
+	Solutions & Applications. Learn how MCOR applications and solutions serve your industry. From pump repairs to epoxy grouts, industrial processing to marine, their is an MCORABILITY to suit your repair and coating needs.
+	</div>
 
 </div>
 
