--- a/index.html
+++ b/index.html
@@ -80,11 +80,13 @@
 	Solutions & Applications. Learn how MCOR applications and solutions serve your industry. From pump repairs to epoxy grouts, industrial processing to marine, their is an MCORABILITY to suit your repair and coating needs.
 	</div>
 
-	<h2>REPAIR & SAVE</h2>
+	<div id="content">
+	<h1>REPAIR & SAVE</h1>
 	<h3>Advanced Mechanical Polymers</h3>
 	MCOR is a manufacturer and supplier of industrial repair and coating polymers designed primarily for maintenance, cold repair and protection of pumps, industrial structures, machinery components and equipment.  MCOR offers cold-applied products for industrial repairs and protective coatings often utilized by mechanical shops, maintenance personnel, and other end-users who seek a welding alternative or have cold-welding needs.  These solve industrial maintenance repair requirements and preventive maintenance protection needs utilizing polymer epoxies, protective coatings, ceramic coatings, urethanes, and other advanced polymer repair and coating systems.  Our customers often seek to reclaim lost metal, repair warped of worn mechanical components, utilize emergency field repair kits, service pumps or fluid handling process equipment, and restore mason related structures with concrete repair epoxy.
 
 	Born from a “cold” repair product line and pump coating manufacturer, today MCOR serves industries such as mining, energy, oil and gas, food and beverage, marine, municipal water and wastewater, and many more; exhibiting high rates of wear and abrasion due to moving mechanical parts, aggressive fluid and solid material handling, steam, heat, and chemicals.  We service at a global level with our headquarters in Florida – manufactured and made in the USA.
+	</div>
 
 </div>
 
